@startuml CLASSES_SERVICE_AUDIT
title "Diagramme de classes — audit-service"
skinparam classAttributeIconSize 0

class AuditEventController {
  - auditEventService : AuditEventService
  + list(page, size, actor, action, from, to) : Page
  + ingest(request) : AuditEventResponse
}
class ActivityReportController {
  - auditEventService : AuditEventService
  + activityReport(from, to) : ActivityReportResponse
}
class AuditEventService {
  - auditEventRepository : AuditEventRepository
  + list(...) : Page
  + ingest(request) : AuditEventResponse
  + buildActivityReport(from, to) : ActivityReportResponse
}
class AuditEventRepository <<interface>> {
  + save(event) : AuditEvent
  + search(...) : Page
}
class AuditEvent {
  - id : Long
  - eventId : UUID
  - occurredAt : Instant
  - actorUsername : String
  - action : String
  - resourceType : String
  - sourceService : String
}

AuditEventController --> AuditEventService
ActivityReportController --> AuditEventService
AuditEventService --> AuditEventRepository
AuditEventRepository --> AuditEvent

@enduml
